--- a/TrelloTestApp/Web.config
+++ b/TrelloTestApp/Web.config
@@ -69,8 +69,8 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <modules>
+    <!--<modules>
       <add name="LogHttp" type="TrelloTestApp.Modules.LoggingModule"/>
-    </modules>
+    </modules>-->
   </system.webServer>
 </configuration>
